# golf-swing-ai-coach

./: PLAN.md  README.md  demo_webcam.py  pyproject.toml  requirements.txt
src/: __init__.py  pose_analyzer.py  visualizer.py
